--- a/_config.yml
+++ b/_config.yml
@@ -257,7 +257,7 @@ jekyll-archives:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
 display_tags: ["Artificial intelligence", "Bioinformatics", "Deep Learning", "Multimodal Analysis", "Rare Disorders"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_categories: ["Publications", "Lab News", "Open Positions"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
